<resources>
    <string name="app_name">Material</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Сегодняшнее</string>
    <string name="yasterday">Вчерашнее</string>
    <string name="day_before_yasterday">Позавчерашнее</string>
    <string name="picture_not_found">Картинка за указанную дату не найдена</string>
    <string name="mars_rover_photos">Снимки с марсохода</string>
    <string name="settings">Настройки</string>
    <string name="apod">Картинка дня</string>
    <string name="green">Зелёная</string>
    <string name="red">Красная</string>
    <string name="black">Чёрная</string>
    <string name="select_theme">Выберите тему</string>
    <string name="photos">Фотографии планет</string>
    <string name="error">Ошибка</string>
    <string name="empty_link">Ссылка пустая</string>
    <string name="more">ещё</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="photo_rover">Фото с марсохода</string>
    <string name="info_rover"> Фото с марсохода %1$s \nСтатус: %2$s</string>
    <string name="todolist">Список дел</string>
</resources>
