<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        app:layout_constraintVertical_bias="0.5"
        android:id="@+id/tv_select_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:gravity="center"
        android:textSize="@dimen/big_text"
        android:text="@string/select_theme" />

    <com.google.android.material.chip.ChipGroup
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"
        android:id="@+id/chip_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/t2_chip_stroke"
            android:text="@string/green" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/red" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/black_theme"
            android:text="@string/black" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

